# Simple-web-crawler

./: .gitignore  Cargo.toml  Makefile  README.md  crawl.js  sites.txt  test.js
rust_crawler/: Cargo.toml
rust_crawler/src/: main.rs
src/: main.rs
