[package]
name = "web_crawler"
version = "0.1.0"
authors = ["Tyler Ilunga <tylerilunga1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.5.4"
num_cpus = "1.13.0"