[package]
name = "rust_crawler"
version = "0.1.0"
authors = ["Tyler Ilunga <tylerilunga1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
hyper = { version = "0.14.1", features = ["full"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
regex = "1.5.4"
tokio = { version = "1", features = ["full"] }

